--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "https://github.com/user/project.git"
   },
+  "dependencies": {
+    "Phaser": "https://github.com/gre/phaser/tarball/v2.0.3"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.0",
